--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -3,8 +3,8 @@
     <h2 class="page-title">Login</h2>
     <form class="form login-form">
       <div class="form-group">
-        <label for="email-login">Email:</label>
-        <input class="form-input" type="text" id="email-login" />
+        <label for="username-login">Email:</label>
+        <input class="form-input" type="text" id="username-login" />
       </div>
       <div class="form-group">
         <label for="password-login">Password:</label>
@@ -14,27 +14,9 @@
         <button class="btn btn-primary" type="submit">login</button>
       </div>
     </form>
+    <a href="/signup">Click to Signup</a>
   </div>
-  <div class="login-card">
-    <h2 class="page-title">Signup</h2>
-    <form class="form signup-form">
-      <div class="form-group">
-        <label for="username-signup">Username:</label>
-        <input class="form-input" type="text" id="username-signup" />
-      </div>
-      <div class="form-group">
-        <label for="email-signup">Email:</label>
-        <input class="form-input" type="text" id="email-signup" />
-      </div>
-      <div class="form-group">
-        <label for="password-signup">Password:</label>
-        <input class="form-input" type="password" id="password-signup" />
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">signup</button>
-      </div>
-    </form>
-  </div>
+  
 </div>
 
 <script src="./js/login.js"></script>
