--- a/views/partials/post-details.handlebars
+++ b/views/partials/post-details.handlebars
@@ -1,7 +1,7 @@
 <section class="card">
   <a href="/post/{{id}}">
     <header>{{title}}</header>
-    <h2>Posted by {{usernam}} on {{format_date post.createdAt}}</h2>
+    <h2>Posted by {{username}} on {{format_date post.createdAt}}</h2>
     <p>{{content}}</p>
   </a>
 </section>
