add dashboard page and post route

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -13,4 +13,7 @@
         <button class="btn btn-primary" type="submit">signup</button>
       </div>
     </form>
+        <a href="/login">Click to Login</a>
   </div>
+
+  <script src="./js/signup.js"></script>
