--- a/views/dashboard-new.handlebars
+++ b/views/dashboard-new.handlebars
@@ -8,7 +8,7 @@
       </div>
       <div class="form-group">
         <label for="post-content">Content:</label>
-        <input class="form-input" type="test" id="post-content" />
+        <input class="form-input" type="text" id="post-content" />
       </div>
       <div class="form-group">
         <button class="btn btn-primary" type="submit">Create</button>
@@ -18,7 +18,7 @@
   </div>
   
 </div>
-<a href="/dashboard/new/"> <button class="btn btn-primary" type="button">New Post</button></a>
+<a href="/dashboard/new"> <button class="btn btn-primary" type="button">New Post</button></a>
 
 <script src="/js/dashboard.js"></script>
 
