--- a/views/partials/comment-details.handlebars
+++ b/views/partials/comment-details.handlebars
@@ -1,4 +1,4 @@
-<section class="card">
+<section class="login-card">
     <h2>Posted by {{username}} on {{format_date createdAt}}</h2>
     <p>{{content}}</p>
   </a>
