--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,5 +1,5 @@
 {{#each posts}}
-    {{> post-details}}
+    {{> post-update}}
 {{/each}}
 
 <a href="/dashboard/new"> <button class="btn btn-primary" type="button">New Post</button></a>
