--- a/views/partials/post-update.handlebars
+++ b/views/partials/post-update.handlebars
@@ -1,5 +1,5 @@
-<section class="card">
-  <a href="/post/{{id}}">
+<section class="login-card">
+  <a href="/post/update/{{id}}">
     <header>{{title}}</header>
     <h2>Posted by {{username}} on {{format_date createdAt}}</h2>
     <p>{{content}}</p>
