--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,5 +1,8 @@
 {{#each posts}}
     {{> post-update}}
 {{/each}}
-
+<div class="row">
+  <div class="col">
 <a href="/dashboard/new"> <button class="btn btn-primary" type="button">New Post</button></a>
+</div>
+</div>
