--- a/views/dashboard-new.handlebars
+++ b/views/dashboard-new.handlebars
@@ -1,5 +1,7 @@
-
+    <div class="row">
+      <div class="col-8">
   <div class="login-card">
+
     <h2 class="page-title">New Post</h2>
     <form class="form post-form">
       <div class="form-group">
@@ -14,12 +16,15 @@
         <button class="btn btn-primary" type="submit">Create</button>
       </div>
     </form>
-
+    </div>
+    </div>
   </div>
   
-
+<div class="row">
+  <div class="col">
 <a href="/dashboard/new"> <button class="btn btn-primary" type="button">New Post</button></a>
-
+</div>
+</div>
 <script src="/js/dashboard.js"></script>
 
 
