--- a/views/dashboard-update.handlebars
+++ b/views/dashboard-update.handlebars
@@ -1,5 +1,6 @@
-
-  <div class="login-card">
+<div class="row ">
+  <div class="col-8">
+      <div class="login-card">
     <h2 class="page-title">New Post</h2>
     <form class="form post-form">
       <div class="form-group">
@@ -16,6 +17,8 @@
       </div>
     </form>
 
+  </div>
+  </div>
   </div>
   
 
