--- a/views/partials/comment-details.handlebars
+++ b/views/partials/comment-details.handlebars
@@ -1,5 +1,9 @@
+<div class="row">
+  <div class="col-8">
 <section class="login-card">
     <h2>Posted by {{username}} on {{format_date createdAt}}</h2>
     <p>{{content}}</p>
   </a>
 </section>
+</div>
+</div>
