--- a/views/partials/post-details.handlebars
+++ b/views/partials/post-details.handlebars
@@ -1,7 +1,13 @@
+  <div class="row ">
+  <div class="col-8">
 <section class="login-card">
+
   <a href="/post/{{id}}">
-    <header>{{title}}</header>
+    <h1>{{title}}</h1>
     <h2>Posted by {{username}} on {{format_date createdAt}}</h2>
     <p>{{content}}</p>
   </a>
+
 </section>
+  </div>
+  </div>
