--- a/views/partials/post-update.handlebars
+++ b/views/partials/post-update.handlebars
@@ -1,7 +1,11 @@
+<div class="row ">
+  <div class="col-8">
 <section class="login-card">
   <a href="/post/update/{{id}}">
-    <header>{{title}}</header>
+    <h1>{{title}}</h1>
     <h2>Posted by {{username}} on {{format_date createdAt}}</h2>
     <p>{{content}}</p>
   </a>
 </section>
+</div>
+</div>
