--- a/views/dashboard-update.handlebars
+++ b/views/dashboard-update.handlebars
@@ -1,4 +1,5 @@
-<div class="row ">
+{{!-- page to update or delete post --}}
+<div class="row justify-content-center">
   <div class="col-8">
       <div class="login-card">
     <h2 class="page-title">New Post</h2>
