--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,8 +1,9 @@
+{{!-- dashboard to show all of that users posts --}}
 {{#each posts}}
     {{> post-update}}
 {{/each}}
-<div class="row">
-  <div class="col">
+<div class="row justify-content-center">
+  <div class="col-8">
 <a href="/dashboard/new"> <button class="btn btn-primary" type="button">New Post</button></a>
 </div>
 </div>
