--- a/views/partials/comment-details.handlebars
+++ b/views/partials/comment-details.handlebars
@@ -1,4 +1,6 @@
-<div class="row">
+
+{{!-- partial to generate comments --}}
+<div class="row justify-content-center">
   <div class="col-8">
 <section class="login-card">
     <h2>Posted by {{username}} on {{format_date createdAt}}</h2>
