--- a/views/dashboard-new.handlebars
+++ b/views/dashboard-new.handlebars
@@ -1,4 +1,5 @@
-    <div class="row">
+   {{!-- page to create a new post --}}
+    <div class="row justify-content-center">
       <div class="col-8">
   <div class="login-card">
 
@@ -20,8 +21,8 @@
     </div>
   </div>
   
-<div class="row">
-  <div class="col">
+<div class="row justify-content-center">
+  <div class="col-8">
 <a href="/dashboard/new"> <button class="btn btn-primary" type="button">New Post</button></a>
 </div>
 </div>
