--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,7 +25,7 @@
     {{/if}}
   </nav>
   <main>
-    <div class="container">
+    <div class="container justify-content-center">
       {{{body}}}
     </div>
   </main>
