--- a/views/partials/post-details.handlebars
+++ b/views/partials/post-details.handlebars
@@ -1,4 +1,5 @@
-  <div class="row ">
+  {{!-- partial to generate posts --}}
+  <div class="row justify-content-center">
   <div class="col-8">
 <section class="login-card">
 
