--- a/views/partials/post-update.handlebars
+++ b/views/partials/post-update.handlebars
@@ -1,4 +1,5 @@
-<div class="row ">
+{{!-- partial for post to update --}}
+<div class="row justify-content-center">
   <div class="col-8">
 <section class="login-card">
   <a href="/post/update/{{id}}">
