--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,4 +1,5 @@
-<div class="row ">
+{{!-- page for a specific post from homepage --}}
+<div class="row justify-content-center">
   <div class="col-8">
 <section class="login-card">
     <h1>{{post.title}}</h1>
@@ -12,8 +13,8 @@
 {{#each comments}}
   {{> comment-details}}
 {{/each}}
-
-<div class="row">
+{{!-- logged in user can add a comment --}}
+<div class="row justify-content-center">
   <div class="col-8">
   <div class="login-card">
     <h2 class="page-title">Comment</h2>
